--- a/src/components/input/index.scss
+++ b/src/components/input/index.scss
@@ -88,4 +88,14 @@
         min-width: 0;
         width: 100%;
     }
+    .input_icon_close{
+        background: url("//p2.lefile.cn/fes/cms/2020/06/20/uc1ntu58kfdsk67cgvb358wakfeoya471654.png");
+        background-size: 20px;
+        position: absolute;
+        right: 20px;
+        top: 2px;
+        cursor: pointer;
+        width: 20px;
+        height: 20px;
+    }
 }
