--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -13,4 +13,4 @@ img{max-width: 100%;}
 .mr10{margin-right: 10px;}
 .ml10{margin-left: 10px;}
 table{border-collapse:collapse;border-spacing:0;} 
-button{outline: none;}
+button{outline: none;border: 0;}
